src/objects/Page_Display_Snippet__c.object
<CustomObject>
    <description>Junction object to associate Page Snippets with Pages.</description>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Snippet__c</fullName>
        <label>Page Snippet</label>
        <referenceTo>Page_Snippet__c</referenceTo>
        <relationshipLabel>Page Display Snippets</relationshipLabel>
        <relationshipName>Page_Display_Snippets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Page Display Snippets</relationshipLabel>
        <relationshipName>Page_Display_Snippets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Snippet_Name__c</fullName>
        <formula>Page_Snippet__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snippet Name</label>
        <type>Text</type>
    </fields>
    <label>Page Display Snippet</label>
    <nameField>
        <displayFormat>PDS-{0000}</displayFormat>
        <label>Page Display Snippet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Display Snippets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>